* SVN *

* Add Liquid Filter helpers for showing comment/article feeds for a section

  {{ section | comments_feed }}
  {{ section | articles_feed: "Latest Articles for this section" }}

* Add site-specific comment atom feeds and global site comment feeds

  {{ '' | all_comments_feed }}
  {{ 'comments.xml' | atom_feed }} # comments for home section
  {{ 'atom.xml' | atom_feed }}     # articles for home section
  {{ 'projects/foo/comments.xml' | atom_feed: "Project Foo Comments" }} # comments for projects/foo section with optional title

* Add liquid drop/filters for getting the latest comments for a section.

  {{ section | latest_comments: 2 }}
  {% for comment in section.comments %}

* Implement theme admin functionality, such as import/export/change/remove

* Remove title from file upload form.  You must use the asset interface if you want to change a files title.

* Allow ability to apply a tag group to all files in file upload form.

* Improve multi-file upload interface.

* Adding Theme admin.  Restructure theme paths to include site-specific private themes.
  /themes/site-#{id}/current - holds current theme
  /themes/site-#{id}/others/* - private themes
  
  The migration should copy your files over.  Rolling back to version 59 will move them back.

* Add {{ section | link_to_month: '2006-9' }} for linking to archive pages.

* Add {{ '2006-1' | parse_date }} for general date parsing

* Fixed issues previewing article drafts

# Added new liquid vars {{ site.latest_articles }} and {{ site.latest_comments }}, 
  as well as filters like {{ site | latest_articles: 5 }} or {{ site | latest_comments: 5 }}

* move liquid drops/filters to app/drops and app/filters

* add multi-asset uploading capabilities.

* add password resetting ability [Geoff Davis, Rick Olson]

* remove 'pages' and 'comments' variables in page/single template types.  Instead use 'section.pages' and 'article.comments', respectively.

* Find child sections of a section
